# SWARM-cli

./: README.md  pyproject.toml
swarm/: auth.py  cli.py  config.py  github.py  push.py  streak.py
